# Backend

./: .env.template  .gitignore  Backend.code-workspace  Dockerfile  Makefile  README.md  build.gradle  compose.dev.yml  compose.yml  mongo_admin.ipynb  pom.xml  pyproject.toml
.github/workflows/: docker.yml
http/: requests.http
src/main/java/de/dhbw_ravensburg/webeng2/backend/: BackendApplication.java
src/main/java/de/dhbw_ravensburg/webeng2/backend/configuration/: SpringDocConfig.java
src/main/java/de/dhbw_ravensburg/webeng2/backend/controller/: BackendApplicationController.java  BackendApplicationControllerExample.java  BookController.java  BookEntityController.java  BookException.java  BookNotFoundException.java  BookRepository.java  BookSearchController.java  LibraryController.java  LibraryException.java  MongoConfig.java  WikipediaController.java
src/main/java/de/dhbw_ravensburg/webeng2/backend/model/: Book.java  BookInfo.java  Library.java  LibraryDTO.java  MongoDbDriver.java  Redis.java  User.java
src/main/java/de/dhbw_ravensburg/webeng2/backend/repos/: BookRepository.java  LibraryRepository.java  RedisRepository.java
src/main/java/de/dhbw_ravensburg/webeng2/backend/service/: BookInfoService.java
src/main/java/edu/webeng2/: App.java
src/main/resources/: application.properties
src/test/java/de/dhbw_ravensburg/webeng2/backend/: BackendApplicationTests.java
src/test/java/edu/webeng2/: AppTest.java
