[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Erix0815", email = "e.a.erath@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "pymongo>=4.10.1",
    "names>=0.3.0",
    "kagglehub>=0.3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
